Blurred line fix, changes in tick color #CRPT-1734

--- a/app/assets/stylesheets/dashboard.less
+++ b/app/assets/stylesheets/dashboard.less
@@ -503,7 +503,7 @@
 
       .axis path, .axis line {
         fill: none;
-        stroke: #ccc;
+        stroke: #e7edf1;
         shape-rendering: crispEdges;
       }
       .x.axis path {
@@ -514,7 +514,6 @@
       }
       .bar {
         fill: #f5f9fd;
-        stroke: #ccd2da;
         shape-rendering: crispEdges;
       }
 
